Closed Bug 404096 Opened 17 years ago Closed 17 years ago

For windows that don't have @titlebarcolor, draw titlebar background state if needed

Categories

(Core :: Widget: Cocoa, defect, P4)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: cbarrett, Assigned: cbarrett)

References

Details

(Keywords: regression)

Attachments

(2 files)

We should check the background state of the window when we draw the titlebar pattern. On Tiger it should be a pinstripe pattern and on Leopard it should be a lighter gradient. This is a technically a regression for XUL consumers who don't specify the titlebarcolor attribute, so it really needs make it in for Firefox 3. Doesn't need to be right away though.
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Priority: -- → P5
I think I already fixed this, we could use a little XUL test case.
This isn't fixed. I just did a pull. What should happen on Tiger: When a normal window is in the background, it should draw with a pinstriped pattern in the titlebar. On Leopard, it should be a lighter gray. That's what this bug is for.
How do you you know it is not fixed? We need a test case here in this bug.
Lauch this by running it with the -chrome command line argument. It doesn't include any external CSS, which is why it behaves as it does. STR: 1. Launch above testcase as the argument to the -chrome commandline flag 2. Focus the app's window 3. Focus another application Expected results: Titlebar will change appearance (on Tiger to a pinstriped background, on Leopard to a lighter than normal gray). Actual results: Titlebar's appearance does not change.
Priority: P5 → P4
Attached patch fix v1.0Splinter Review
Attachment #290897 - Flags: review?(joshmoz)
Attachment #290897 - Flags: superreview?(roc)
Attachment #290897 - Flags: review?(joshmoz)
Attachment #290897 - Flags: review+
Attachment #290897 - Flags: superreview?(roc) → superreview+
Checking in widget/src/cocoa/nsCocoaWindow.mm; /cvsroot/mozilla/widget/src/cocoa/nsCocoaWindow.mm,v <-- nsCocoaWindow.mm new revision: 1.123; previous revision: 1.122 done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Blocks: 407063
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: