Bug 404096 - For windows that don't have @titlebarcolor, draw titlebar background state if needed. r=josh, sr=roc.